[workspace]
members = ["crates/lmntalc-core", "crates/lmntalc-ide"]
resolver = "2"

[package]
name = "lmntalc"
authors = ["QRWells <qirui.wang@moegi.waseda.jp>"]
license = "MIT"
description = "A compiler for the LMNtal language"
readme = "README.md"
repository = "https://gitlab.ueda.info.waseda.ac.jp/wang/lmntalc"
version = "0.12.0"
edition = "2024"

[lib]
name = "lmntalc"
path = "src/lib.rs"

[[bin]]
name = "lmntalc"
path = "src/main.rs"
doc = false

[dependencies]
ariadne = { version = "0.6", features = ["auto-color"] }
clap = { version = "4.6", features = ["derive"] }
lmntalc-core = { path = "crates/lmntalc-core" }
owo-colors = "4"
termtree = "1.0"
