[workspace]
members = ["crates/lmntalc-core", "crates/lmntalc-ide", "crates/lmntal-language-server"]
resolver = "2"

[workspace.package]
version = "0.13.1"
edition = "2024"
license = "MIT"
authors = ["QRWells <qirui.wang@moegi.waseda.jp>"]
repository = "https://github.com/lmntal/lmntalc"

[workspace.dependencies]
lmntalc-core = { version = "0.13.1", path = "crates/lmntalc-core" }
lmntalc-ide = { version = "0.13.1", path = "crates/lmntalc-ide" }

[package]
name = "lmntalc"
authors.workspace = true
license.workspace = true
description = "A compiler for the LMNtal language"
readme = "README.md"
repository.workspace = true
version.workspace = true
edition.workspace = true

[lib]
name = "lmntalc"
path = "src/lib.rs"

[[bin]]
name = "lmntalc"
path = "src/main.rs"
doc = false

[dependencies]
ariadne = { version = "0.6", features = ["auto-color"] }
clap = { version = "4.6", features = ["derive"] }
lmntalc-core.workspace = true
owo-colors = "4"
termtree = "1.0"
