[package]
name = "lmntal-language-server"
version = "0.2.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "A language server for LMNtal."
readme = "README.md"

[lib]
name = "lmntal_language_server"
path = "src/lib.rs"

[[bin]]
name = "lmntal-language-server"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6", features = ["derive"] }
env_logger = "0.11"
lmntalc-ide.workspace = true
reqwest = { version = "0.13", features = ["json"] }
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.51", features = ["full"] }
tower-lsp-server = { version = "0.23", features = ["proposed"] }
