[package]
name = "lmntalc-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Backend-neutral compiler core for lmntalc"
authors.workspace = true
repository.workspace = true

[lib]
name = "lmntalc_core"
path = "src/lib.rs"

[dependencies]
once_cell = "1.21"
petgraph = { version = "0.8", features = ["serde-1"] }
serde = { version = "1.0", features = ["derive"] }
