[package]
name = "lmntalc-ide"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "IDE-oriented document/session APIs for lmntalc"
authors.workspace = true
repository.workspace = true

[lib]
name = "lmntalc_ide"
path = "src/lib.rs"

[dependencies]
lmntalc-core.workspace = true
