[package]
name = "lmntalc"
authors = ["QRWells <mr.qrwang@gmail.com>"]
license = "MIT"
description = "A compiler for the LMNtal language"
readme = "README.md"
repository = "https://github.com/lmntal/lmntalc"
version = "0.13.0"
edition = "2021"

[lib]
name = "lmntalc"
path = "src/lib.rs"

[[bin]]
name = "lmntalc"
path = "src/main.rs"
doc = false

[dependencies]
lmntal-syntax = { path = "../lmntal-syntax" }
lmntal-ir = { path = "../lmntal-ir" }

ariadne = { version = "0.4", features = ["auto-color"] }
clap = { version = "4.5", features = ["derive"] }
once_cell = "1.19"
owo-colors = "4"
petgraph = { version = "0.6", features = ["serde-1"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
termtree = "0.5"
